--- a/JenkinsFile
+++ b/JenkinsFile
@@ -205,6 +205,106 @@ stage('Deploy - Staging') {
   }
 }
 
+stage('Release - Production') {
+  when { branch 'main' } // keep or remove as you prefer
+  steps {
+    script {
+      // --- Optional: manual approval before prod ---
+      input message: "Promote build ${env.BUILD_NUMBER} to PRODUCTION?", ok: 'Deploy'
+
+      bat '''
+        setlocal ENABLEDELAYEDEXPANSION
+
+        rem --- prepare folders ---
+        if not exist deploy mkdir deploy
+        if not exist reports mkdir reports
+        copy /Y docker-compose.production.yml deploy\\docker-compose.production.yml >NUL
+
+        rem --- read the image that was built in the Build stage ---
+        for /f %%i in (build\\image-tag.txt) do set "IMAGE=%%i"
+        echo Releasing image: !IMAGE!
+
+        rem --- tag for prod and latest (local) ---
+        for /f "tokens=1 delims=:" %%a in ("!IMAGE!") do set "IMGNAME=%%a"
+        for /f "tokens=2 delims=:" %%a in ("!IMAGE!") do set "IMGTAG=%%a"
+        set "PROD_TAG=!IMGNAME!:prod-%BUILD_NUMBER%"
+        set "LATEST_TAG=!IMGNAME!:latest"
+
+        docker tag "!IMAGE!" "!PROD_TAG!"
+        docker tag "!IMAGE!" "!LATEST_TAG!"
+
+        rem --- (optional) push to a registry if you have one ---
+        rem docker login <your-registry>
+        rem docker tag "!IMAGE!" <your-registry>/"!IMAGE!"
+        rem docker push <your-registry>/"!IMAGE!"
+
+        rem --- keep a backup of last-good for rollback ---
+        if exist build\\prod-last-good.txt copy /Y build\\prod-last-good.txt build\\prod-last-good.prev >NUL 2>&1
+        echo !PROD_TAG! > build\\prod-candidate.txt
+
+        rem --- deploy prod stack ---
+        pushd deploy
+        docker compose -p sl_prod -f docker-compose.production.yml down --remove-orphans || echo ok
+
+        rem --- export IMAGE for compose substitution ---
+        set "IMAGE=!PROD_TAG!"
+        docker compose -p sl_prod -f docker-compose.production.yml up -d --remove-orphans
+        popd
+      '''
+
+      // --- Health gate (PRODUCTION) ---
+      bat """
+        powershell -NoProfile -Command ^
+          \"$ErrorActionPreference='Stop'; ^
+            \$ok=\$false; for(\$i=0;\$i -lt 90;\$i++){ ^
+              try{ ^
+                \$r=Invoke-WebRequest 'http://localhost:5003/health' -UseBasicParsing; ^
+                if(\$r.StatusCode -eq 200){ \$ok=\$true; break } ^
+              } catch { Start-Sleep -s 2 } ^
+            }; ^
+            if(-not \$ok){ Write-Error 'PROD app did not become healthy in time'; exit 1 }\"
+      """
+
+      // mark this image as last-good only after health passes
+      bat '''
+        copy /Y build\\prod-candidate.txt build\\prod-last-good.txt >NUL
+        echo Production release healthy.
+      '''
+    }
+  }
+  post {
+    success {
+      echo "✅ Production deployed & healthy at http://localhost:5003"
+    }
+    failure {
+      echo '❌ Production deploy failed – attempting rollback...'
+      // Grab logs to help debugging
+      bat 'if not exist reports mkdir reports'
+      bat 'docker compose -p sl_prod -f deploy\\docker-compose.production.yml ps   > reports\\prod-ps.txt   || echo ok'
+      bat 'docker compose -p sl_prod -f deploy\\docker-compose.production.yml logs > reports\\prod-logs.txt || echo ok'
+
+      // Roll back to the last known good image if available
+      bat '''
+        setlocal ENABLEDELAYEDEXPANSION
+        if exist build\\prod-last-good.txt (
+          for /f %%i in (build\\prod-last-good.txt) do set "ROLLBACK=%%i"
+          echo Rolling back to !ROLLBACK!
+
+          pushd deploy
+          docker compose -p sl_prod -f docker-compose.production.yml down --remove-orphans || echo ok
+          set "IMAGE=!ROLLBACK!"
+          docker compose -p sl_prod -f docker-compose.production.yml up -d --remove-orphans || echo ok
+          popd
+
+          echo "Rollback attempted. Check health manually at http://localhost:5003/health"
+        ) else (
+          echo No last-good image found. Manual intervention required.
+        )
+      '''
+      archiveArtifacts artifacts: 'reports/prod-*.txt', fingerprint: true
+    }
+  }
+}
 
 
     stage('Archive artefacts') {
