--- a/JenkinsFile
+++ b/JenkinsFile
@@ -204,13 +204,14 @@ stage('Deploy - Staging') {
     }
   }
 }
-
 stage('Release - Production') {
-  // allow manual promotion on any branch by leaving this when out or keep your current guard
+  // keep/remove a branch guard if you want; here we allow manual promotion from any branch
   steps {
     script {
+      // Manual approval
       input message: "Promote build ${env.BUILD_NUMBER} to PRODUCTION?", ok: 'Deploy'
 
+      // Tag + deploy with Docker Compose
       bat '''
         setlocal ENABLEDELAYEDEXPANSION
 
@@ -246,19 +247,25 @@ stage('Release - Production') {
         popd
       '''
 
-      // HEALTH CHECK: use SINGLE-QUOTED Groovy string so $ isn't interpolated
-      bat '''
-        powershell -NoProfile -Command ^
-          "$ErrorActionPreference='Stop'; ^
-            $ok=$false; for($i=0;$i -lt 90;$i++){ ^
-              try{ ^
-                $r=Invoke-WebRequest 'http://localhost:5003/health' -UseBasicParsing; ^
-                if($r.StatusCode -eq 200){ $ok=$true; break } ^
-              } catch { Start-Sleep -s 2 } ^
-            }; ^
-            if(-not $ok){ Write-Error 'PROD app did not become healthy in time'; exit 1 }"
-      '''
+      // Health gate (run as real PowerShell, no caret/quoting headaches)
+      powershell '''
+$ErrorActionPreference = "Stop"
+$ok = $false
+for ($i = 0; $i -lt 90; $i++) {
+  try {
+    $r = Invoke-WebRequest "http://localhost:5003/health" -UseBasicParsing
+    if ($r.StatusCode -eq 200) { $ok = $true; break }
+  } catch {
+    Start-Sleep -Seconds 2
+  }
+}
+if (-not $ok) {
+  Write-Error "PROD app did not become healthy in time"
+  exit 1
+}
+'''
 
+      // mark this image as last-good only after health passes
       bat '''
         copy /Y build\\prod-candidate.txt build\\prod-last-good.txt >NUL
         echo Production release healthy.
@@ -271,7 +278,8 @@ stage('Release - Production') {
     }
     failure {
       echo '❌ Production deploy failed – attempting rollback...'
-      // Collect diagnostics – ensure IMAGE is set for compose
+
+      // Diagnostics (ensure IMAGE is set so compose parses)
       bat '''
         if not exist reports mkdir reports
 
@@ -292,7 +300,8 @@ stage('Release - Production') {
         docker compose -p sl_prod -f docker-compose.production.yml logs > "..\\reports\\prod-logs.txt" || echo ok
         popd
       '''
-      // Roll back to last good
+
+      // Roll back to last known good (if available)
       bat '''
         setlocal ENABLEDELAYEDEXPANSION
         if exist build\\prod-last-good.txt (
@@ -314,6 +323,7 @@ stage('Release - Production') {
     }
   }
 }
+
 
     stage('Archive artefacts') {
       steps {
