--- a/deploy/docker-compose.staging.yml
+++ b/deploy/docker-compose.staging.yml
@@ -1,14 +1,15 @@
-version: "3.9"
 services:
   web:
-    image: ${REGISTRY}/flask-shopping-list:${IMAGE_TAG}
+    image: ${IMAGE}              # Jenkins exports IMAGE before running compose
     ports:
-      - "5001:5000"
+      - "5002:5000"              # host:container (staging on 5002)
     env_file:
-      - ./staging.env
+      - ./staging.env            # read KEY=VALUE pairs from this file
+    environment:
+      CI: "true"
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:5000/health"]
       interval: 5s
       timeout: 2s
-      retries: 6
-    restart: always
+      retries: 15
+    restart: unless-stopped
