--- a/JenkinsFile
+++ b/JenkinsFile
@@ -150,17 +150,9 @@ stage('Security') {
   }
 }
 stage('Deploy - Staging') {
-  when {
-    expression {
-      // Run if this is a multibranch build of 'main' OR a classic job (BRANCH_NAME is null)
-      return (env.BRANCH_NAME == null) ||
-             (env.BRANCH_NAME == 'main') ||
-             (env.GIT_BRANCH?.endsWith('/main'))
-    }
-  }
+  // keep your when{} guard if you want; removing it makes this always run
   steps {
     script {
-      // Deploy with Docker Compose using the image built earlier
       bat '''
         setlocal ENABLEDELAYEDEXPANSION
 
@@ -168,6 +160,7 @@ stage('Deploy - Staging') {
         if not exist deploy mkdir deploy
         if not exist reports mkdir reports
         copy /Y docker-compose.staging.yml deploy\\docker-compose.staging.yml >NUL
+        copy /Y staging.env                 deploy\\staging.env >NUL
 
         rem --- read image tag written in Build stage (e.g. "flask-shopping-list:46-abc1234") ---
         for /f %%i in (build\\image-tag.txt) do set "IMAGE=%%i"
@@ -183,7 +176,7 @@ stage('Deploy - Staging') {
         popd
       '''
 
-      // Health check (use native PowerShell step to avoid caret/quoting issues)
+      // Health check (PowerShell, no caret escaping needed)
       powershell '''
 $ErrorActionPreference = "Stop"
 $ok = $false
@@ -191,11 +184,9 @@ for ($i = 0; $i -lt 60; $i++) {
   try {
     $r = Invoke-WebRequest "http://localhost:5002/health" -UseBasicParsing
     if ($r.StatusCode -eq 200) { $ok = $true; break }
-  } catch {
-    Start-Sleep -Seconds 2
-  }
+  } catch { Start-Sleep -Seconds 2 }
 }
-if (-not $ok) { Write-Error "Staging app did not become healthy in time"; exit 1 }
+if (-not $ok) { throw "Staging app did not become healthy in time" }
 '''
     }
   }
@@ -211,6 +202,7 @@ if (-not $ok) { Write-Error "Staging app did not become healthy in time"; exit 1
     }
   }
 }
+
 
 stage('Release - Production') {
   // keep/remove a branch guard if you want; here we allow manual promotion from any branch
