--- a/deploy/docker-compose.staging.yml
+++ b/deploy/docker-compose.staging.yml
@@ -1,15 +1,15 @@
-version: "3.9"
+# (optional) remove 'version:' line to silence the warning
 services:
   web:
-    image: ${IMAGE}              # set by the Jenkins stage
+    image: ${IMAGE}
     ports:
       - "5002:5000"
     env_file:
-      - ../staging.env           # <— add this
+      - ./staging.env   # <— from inside the deploy folder
     environment:
-      CI: "true"                 # keep only extras here; don't duplicate SECRET_KEY/FLASK_ENV
+      CI: "true"
     healthcheck:
-      test: ["CMD", "curl", "-fsS", "http://localhost:5000/health"]
+      test: ["CMD", "python", "-c", "import urllib.request,sys; urllib.request.urlopen('http://localhost:5000/health'); sys.exit(0)"]
       interval: 5s
       timeout: 2s
       retries: 15
