--- a/JenkinsFile
+++ b/JenkinsFile
@@ -287,7 +287,7 @@ if (-not $ok) {
   }
   post {
     success {
-      echo "✅ Production deployed & healthy at http://localhost:5003"
+      echo "Production deployed & healthy at http://localhost:5003"
     }
     failure {
       echo '❌ Production deploy failed – attempting rollback...'
@@ -365,14 +365,14 @@ stage('Monitoring & Alerting (Datadog)') {
 
         // ONE-LINE PowerShell health check (no carets, no multiline)
         bat '''
-          powershell -NoProfile -Command "$ErrorActionPreference='Stop'; $r=Invoke-WebRequest -Uri 'http://localhost:5003/health' -UseBasicParsing; if ($r.StatusCode -eq 200) { Write-Host '✅ App is healthy, Datadog agent is monitoring it.'; exit 0 } else { Write-Error '❌ App health check failed.'; exit 1 }"
+          powershell -NoProfile -Command "$ErrorActionPreference='Stop'; $r=Invoke-WebRequest -Uri 'http://localhost:5003/health' -UseBasicParsing; if ($r.StatusCode -eq 200) { Write-Host 'App is healthy, Datadog agent is monitoring it.'; exit 0 } else { Write-Error '❌ App health check failed.'; exit 1 }"
         '''
       }
     }
   }
   post {
-    success { echo '✅ Datadog Agent running and app is healthy.' }
-    failure { echo '❌ Datadog Monitoring stage failed. See console log.' }
+    success { echo 'Datadog Agent running and app is healthy.' }
+    failure { echo 'Datadog Monitoring stage failed. See console log.' }
   }
 }
 
